# STM32BareMetal

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  stm32f103c8tx_FLASH.ld
.github/workflows/: cmake-single-platform.yml
Core/: CMakeLists.txt
Core/Inc/: core.hpp  main.h
Core/Src/: Main.cpp  NoopAtexit.cpp  Retargeted.cpp  core.cpp  main.c
Modules/Peripherals/Inc/: Exti.hpp  Gpio.hpp  InterruptManager.hpp  Peripherals.hpp  Rcc.hpp  Usart.hpp
Modules/Peripherals/Src/: Gpio.cpp  InterruptManager.cpp  Rcc.cpp  Usart.cpp
Modules/TM1637/: TM1637.cpp  TM1637.hpp
Modules/Tasks/: Display.hpp  Leds.hpp  Print.hpp
Peripherals/Inc/: resetAndClockControl.hpp
Peripherals/Inc/Registers/: flashAccessControlRegister.hpp  rccConfigRegister.hpp  rccControlRegister.hpp  sysTickControlRegister.hpp  sysTickReloadRegister.hpp  sysTickValueRegister.hpp
Peripherals/Inc/Registers/RCC/: rccControlRegister.hpp  sysTickReloadRegister.hpp  sysTickValueRegister.hpp
Peripherals/Src/: resetAndClockControl.cpp
Tests/: CMakeLists.txt
Tests/Modules/Usart/: GetMantissaAndFraction.cpp
cmake/: gcc-arm-none-eabi.cmake  test-toolchain.cmake  vscode_generated.cmake
